--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,3 @@
-compile.on.save=true
-do.depend=false
-do.jar=true
-do.jlink=false
-javac.debug=true
-javadoc.preview=true
-jlink.strip=false
-user.properties.file=C:\\Users\\HP\\AppData\\Roaming\\NetBeans\\12.2\\build.properties
+file.reference.gson-2.2.2.jar=C:\\Program Files
+file.reference.jfreechart-1.5.3.jar=C:\\Program Files\\NetBeans 8.2\\dependencies\\jfreechart-1.5.3
+user.properties.file=C:\\Users\\juana\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
