--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,12 +36,14 @@ dist.jlink.output=${dist.jlink.dir}/Proyecto1
 endorsed.classpath=
 excludes=
 file.reference.gson-2.2.2.jar=C:\\Users\\HP\\Downloads\\gson-2.2.2.jar
+file.reference.gson-2.8.2.jar=C:\\Program Files\\NetBeans 8.2\\dependencies\\gson-2.8.2.jar
 file.reference.jfreechart-1.5.3.jar=C:\\Users\\HP\\Downloads\\jfreechart-1.5.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.gson-2.2.2.jar}:\
-    ${file.reference.jfreechart-1.5.3.jar}
+    ${file.reference.jfreechart-1.5.3.jar}:\
+    ${file.reference.gson-2.8.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -50,8 +52,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=14
-javac.target=14
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
