--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,10 @@
-file.reference.gson-2.2.2.jar=C:\\Program Files
-file.reference.jfreechart-1.5.3.jar=C:\\Program Files\\NetBeans 8.2\\dependencies\\jfreechart-1.5.3
-user.properties.file=C:\\Users\\juana\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+compile.on.save=false
+do.depend=false
+do.jar=true
+do.jlink=false
+file.reference.gson-2.8.2.jar=C:\\Users\\HP\\Downloads\\gson-2.2.2.jar
+file.reference.jfreechart-1.5.3.jar=C:\\Users\\HP\\Downloads\\jfreechart-1.5.3.jar
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=C:\\Users\\HP\\AppData\\Roaming\\NetBeans\\12.2\\build.properties
