--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -7,4 +7,4 @@ file.reference.jfreechart-1.5.3.jar=C:\\Users\\HP\\Downloads\\jfreechart-1.5.3.j
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\HP\\AppData\\Roaming\\NetBeans\\12.2\\build.properties
+user.properties.file=C:\\Users\\Dell\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
