--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,9 +2,9 @@ compile.on.save=false
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.gson-2.8.2.jar=C:\\Users\\HP\\Downloads\\gson-2.2.2.jar
-file.reference.jfreechart-1.5.3.jar=C:\\Users\\HP\\Downloads\\jfreechart-1.5.3.jar
+file.reference.gson-2.8.2.jar=C:\\Users\\Luciano Xiqu\u00edn\\Downloads\\gson-2.8.2.jar
+file.reference.jfreechart-1.5.3.jar=C:\\Users\\Luciano Xiqu\u00edn\\Downloads\\jfreechart-1.5.3.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Dell\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
+user.properties.file=C:\\Users\\Luciano Xiqu\u00edn\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
